syntax = "proto3";
package stellara.marketplace;

import "google/protobuf/timestamp.proto";

message Listing {
  string id = 1;
  string seller_id = 2;
  string title = 3;
  string description = 4;
  int64 price_cents = 5;
  string currency = 6;
  google.protobuf.Timestamp created_at = 7;
}

message CreateListingReq {
  Listing listing = 1;
}

message CreateListingRes {
  Listing listing = 1;
}

message GetListingReq {
  string id = 1;
}

message GetListingRes {
  Listing listing = 1;
}

service Marketplace {
  rpc CreateListing(CreateListingReq) returns (CreateListingRes);
  rpc GetListing(GetListingReq) returns (GetListingRes);
}
